[workspace]
members = ["crates/*", "bin/*"]
default-members = ["bin/opfp"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["BrianBland"]
repository = "https://github.com/BrianBland/fp-test-cases"
homepage = "https://github.com/BrianBland/fp-test-cases"
exclude = ["**/target", "benches/"]

[workspace.dependencies]
# General
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "1"
color-eyre = "0.6"
lazy_static = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
shellwords = "1"
reqwest = { version = "0.12", features = ["stream"] }
tracing-subscriber = "0.3.18"
byteorder = "1.5.0"

# Alloy Dependencies
alloy-primitives = { version = "0.8" }
alloy-eips = { version = "0.11.0" }
alloy-provider = { version = "0.11.0" }

# Maili
maili-genesis = "0.2.8"
maili-protocol = "0.2.8"
maili-registry = "0.2.8"

# OP Types
kona-providers-alloy = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.9" }
kona-derive = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.9" }
kona-host = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.9" }

# OP Succinct
op-succinct-host-utils = { git = "https://github.com/succinctlabs/op-succinct", rev = "28c476780b171d6681b15f4a17d7c6e038744a8e" }
sp1-sdk = { version = "4.1.0" }

# Internal
fp-test-fixtures = { path = "crates/fp-test-fixtures" }


[patch."https://github.com/succinctlabs/op-succinct"]
op-succinct-host-utils ={ path= "../../op-succinct/utils/host" }