[workspace]
members = ["crates/*", "bin/*"]
default-members = ["bin/opfp"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["BrianBland"]
repository = "https://github.com/BrianBland/fp-test-cases"
homepage = "https://github.com/BrianBland/fp-test-cases"
exclude = ["**/target", "benches/"]

[workspace.dependencies]
# General
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "1"
color-eyre = "0.6"
lazy_static = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
shellwords = "1"
reqwest = { version = "0.12", features = ["stream"] }
tracing-subscriber = "0.3.18"
byteorder = "1.5.0"

# Alloy Dependencies
alloy-primitives = { version = "0.8" }
alloy-eips = { version = "0.11.0" }
alloy-provider = { version = "0.11.0" }

# Maili
maili-genesis = "0.2.8"
maili-protocol = "0.2.8"
maili-registry = "0.2.8"

# OP Types
kona-derive = { git = "https://github.com/op-rs/kona", rev = "223d1ba" }
kona-host = { git = "https://github.com/op-rs/kona", rev = "223d1ba" }
kona-genesis = { git = "https://github.com/op-rs/kona", rev = "223d1ba" }
kona-protocol = { git = "https://github.com/op-rs/kona", rev = "223d1ba" }
kona-providers-alloy = { git = "https://github.com/op-rs/kona", rev = "223d1ba" }
kona-registry = { git = "https://github.com/op-rs/kona", rev = "223d1ba" }


# OP Succinct
op-succinct-host-utils = { git = "https://github.com/succinctlabs/op-succinct", rev = "3189e6e" }
op-succinct-client-utils = { git = "https://github.com/succinctlabs/op-succinct", rev = "3189e6e" }

# SP1
sp1-sdk = "4.1.3"
sp1-core-executor = "4.1.3"

# Internal
fp-test-fixtures = { path = "crates/fp-test-fixtures" }

